cmake_minimum_required(VERSION 3.21)
project(untitled2)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled2 main.cpp)

add_executable(demo001 demo001.cpp)
add_executable(demo002 demo002.cpp)
add_executable(demo003 demo003.cpp)
add_executable(demo004 demo004.cpp)
add_executable(demo005 demo005.cpp)
add_executable(demo006 demo006.cpp)
add_executable(demo007 demo007.cpp)
add_executable(demo008 demo008.cpp)
add_executable(demo009 demo009.cpp)
add_executable(demo010 demo010.cpp)
add_executable(demo011 demo011.cpp)
add_executable(demo demo.cpp)
add_executable(demo012 demo012.cpp)
add_executable(calculate001 calculate001.cpp)
add_executable(demo013 demo013.cpp)
add_executable(demo014 demo014.cpp)
add_executable(demo015 demo015.cpp)
add_executable(demo016 demo016.cpp)
add_executable(demo017 demo017.cpp)
add_executable(LinkNode LinkNode.cpp)
add_executable(LinkNode02 LinkNode02.cpp)